fix: configuration 옵션 및 설정 변경